підключається до бд. переходить далі (теоретично не створює таблиці) дебаг